// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: status === ERROR: вернет правильный результат 1`] = `
Object {
  "key": "Есть расхождения в истории пробегов",
}
`;

exports[`карточка: status === OK: вернет правильный результат, если есть записи 1`] = `
Object {
  "key": "2 записи в истории пробегов",
}
`;

exports[`карточка: status === UNKNOWN: вернет правильный результат 1`] = `
Object {
  "key": "Нет записей об истории пробегов",
}
`;

exports[`отчет: status === ERROR: вернет правильный результат 1`] = `
Object {
  "key": "История пробегов",
  "value": "Есть расхождения",
}
`;

exports[`отчет: status === OK: если есть оффер и кол-во 1, вернет правильный результат 1`] = `
Object {
  "key": "История пробегов",
  "value": "Это объявление",
}
`;

exports[`отчет: status === OK: если есть оффер и кол-во не 1, вернет правильный результат 1`] = `
Object {
  "key": "История пробегов",
  "value": "Это объявление + 2 записи",
}
`;

exports[`отчет: status === OK: если нет оффера и есть кол-во, вернет правильный результат 1`] = `
Object {
  "key": "История пробегов",
  "value": "2 записи",
}
`;

exports[`отчет: status === OK: если нет оффера и нет кол-ва, вернет правильный результат 1`] = `
Object {
  "field": "mileages_graph",
  "status": "REMOVE",
}
`;
